# criticus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tendon.py
criticus/: __main__.py  app.py  gui.py  mac_layout.py  main_layout.py  pc_layout.py  views.py  web.py
criticus/py/: ce_config.py  check_for_updates.py  combine_xml.py  custom_popups.py  edit_settings.py  txt_from_json.py
criticus/py/analyze_collation/: analyze_collation_ui.py  find_agreements.py
criticus/py/cbgm_interface/: clean_xml.py  open_cbgm_api.py  open_cbgm_ui.py
criticus/py/export_to_docx/: xml_to_docx.py  xml_to_docx_ui.py
criticus/py/md2tei/: MarkdownTEI.py  markdown_to_tei.py  md_tei_extension.py
criticus/py/reformat_collation/: clean_wits.py  differentiate_subreading_ids.py  itsee_to_open_cbgm.py  reformat_xml.py  reformat_xml_ui.py
criticus/py/serve_tei_transcriptions/: serve_tei.py  serve_tei_tx_ui.py
criticus/py/tei2json/: edit_regex.py  from_tei.py  tei2json_ui.py  tei_to_json.py  to_json.py
criticus/py/txt2json/: convert_text_to_json.py  window_text_to_json.py
criticus/resources/: header.xml  tei_transcription.xsl
criticus/static/css/: bootstrap.min.css
criticus/static/js/: bootstrap.min.js
criticus/templates/: _checkbox.html  _collation_editor_options.html  _file_list.html  _input_floating.html  _listbox.html  _modal.html  _radio_btn.html  _regexes.html  base.html  collation_editor.html  combine_collations.html  export_collation.html  index.html  markdown_to_tei.html  plain_text_to_json.html  reformat_collation.html  tei_to_json.html  tei_viewer.html
criticus/web/: asgi.py  models.py  settings.py  urls.py  views.py
criticus/web/migrations/: 0001_initial.py
examples/: 01_R14.txt  example.md  example_reformatted.xml  example_tei.xml  sample_collation.xml  simple_example.md
py/: collation_layout.py  functions.py  menu.py  prepare_json_layout.py  settings.json  transcription_layout.py  xml_to_json.py  xml_to_text.py
src/: Tendon.py  req.txt
src/tendon/: __main__.py  app.py  config.json  mac_layout.py  pc_layout.py
src/tendon.dist-info/: METADATA
src/tendon/py/: ce_config.py  combine_xml.py  custom_popups.py  edit_settings.py  txt_from_json.py  update_tendon.py
src/tendon/py/cbgm_interface/: open_cbgm_api.py  open_cbgm_ui.py
src/tendon/py/export_to_docx/: template.docx  xml_to_docx.py  xml_to_docx_ui.py
src/tendon/py/md2tei/: MarkdownTEI.py  markdown_to_tei.py  md_tei_extension.py
src/tendon/py/reformat_collation/: differentiate_subreading_ids.py  itsee_to_open_cbgm.py  reformat_xml_ui.py
src/tendon/py/serve_tei_transcriptions/: serve_tei.py  serve_tei_tx_ui.py
src/tendon/py/tei2json/: edit_regex.py  from_tei.py  tei2json_ui.py  tei_to_json.py  to_json.py
src/tendon/py/txt2json/: convert_text_to_json.py  window_text_to_json.py
src/tendon/resources/: template.xml
tendon/: app.py
tendon/py/: ce_config.py  custom_popups.py
tendon/py/export_to_docx/: xml_to_docx.py  xml_to_docx_ui.py
tendon/py/md2tei/: MarkdownTEI.py
tendon/py/tei2json/: edit_regex.py  tei2json_ui.py  tei_to_json.py
tendon/resources/: tendon.icns
