[tool.poetry]
name = "criticus"
version = "0.32.1"
description = "A suite of tools for transcribing, collating and and creating an apparatus criticus."
authors = ["David Flood <davidfloodii@gmail.com>"]
license = "MIT"
readme = "./pypi_readme.md"
homepage = "https://github.com/d-flood/criticus"
repository = "https://github.com/d-flood/Criticus"
keywords = ["TEI", "transcription", "collation", "critical", "apparatus"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"
PySimpleGUI = "^4.57.0"
natsort = "^8.1.0"
Markdown = "==3.2.2"
markdown-del-ins = "^1.0.0"
python-docx = "^0.8.11"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
rich = "^11.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
